<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.mue.themingo.ScheduleActivity"
    tools:showIn="@layout/schedule">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule1"
        android:id="@+id/textView20"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule2"
        android:id="@+id/textView21"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule3"
        android:id="@+id/textView22"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule4"
        android:id="@+id/textView23"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:layout_below="@+id/textView24"
        android:layout_alignRight="@+id/textView20"
        android:layout_alignEnd="@+id/textView20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule5"
        android:id="@+id/textView24"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:layout_alignBottom="@+id/textView25"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule6"
        android:id="@+id/textView25"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Schedule7"
        android:id="@+id/textView26"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
